--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@keyframes gradient-move {
+  0% { background-position: 100% 0; }
+  100% { background-position: 0 0; }
+}
+
+.hover-box {
+  @apply text-[#F19F1F] font-extralight py-2 px-4;
+  background: white;
+  background-image: linear-gradient(to right, white 50%, #F19F1F 50%);
+  background-size: 200% 100%;
+  transition: background-position 0.5s ease-in-out;
+}
+
+.hover-box:hover {
+  background-position: -100% 0;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
